--- a/store/templates/hel.html
+++ b/store/templates/hel.html
@@ -1,6 +1,10 @@
 <html>
     <body>
         <h2>hello{{name}}</h2>
-        
+        <ul>
+            {% for product in products%}
+            <li>{{product.product_name}}</li>
+            {%endfor%}
+        </ul>
     </body>
 </html>
